# AI-agent

./: .env  .gitignore  README.md  docker-compose.yml
backend/: index.http
backend/ai-sytem-backend/: Dockerfile  pyproject.toml
backend/ai-sytem-backend/src/ai_sytem_backend/: database.py  main.py  models.py
backend/ai-sytem-backend/src/ai_sytem_backend/core/: get_all_books.py  initialize.py  main.py
backend/ai-sytem-backend/src/ai_sytem_backend/headlines/: get_headlines.py
backend/ai-sytem-backend/src/ai_sytem_backend/scrapers/: book_scraper.py  hn_scraper.py
backend/ai-sytem-backend/src/ai_sytem_backend/search/: search_books.py
backend/ai-sytem-backend/tests/: test_api.py
frontend/: Dockerfile  default.conf  env.js  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: QAItem.jsx  QueryInput.jsx
frontend/src/helpers/: handleTextAreaResize.js
frontend/src/helpers/app/: handleTextareaResize.js
frontend/src/hooks/: useSpeechRecognition.js
n8n/: Dockerfile
workflows/: Asistente_Virtual (1).json  Dockerfile  entrypoint.sh  n8n_credentials.json  n8n_workflow.json
